# vsconf

./: .editorconfig  .gitignore  README.md  dev.md  pyproject.toml
.github/workflows/: ci.yml
config/linux/: keybindings.json  settings.json
config/linux/snippets/: go.json  python.json  shell.json
config/macos/: keybindings.json  runners.json  settings.json
config/macos/snippets/: java.json  javascript.json
config/windows/: keybindings.json  runners.json  settings.json
config/windows/snippets/: rust.json
data/: global.json  messages.json  paths.json  shortcuts.json
extensions/: devops.json  formatters.json  languages.json  productivity.json  runners.json  viewers.json
src/vsconf/: __init__.py  __main__.py  cli.py  data.py  extensions.py  output.py  platform.py  settings.py
src/vsconf/cli/: __init__.py  main.py
src/vsconf/core/: __init__.py  extensions.py  platform.py  runners.py  security.py  settings.py
src/vsconf/data/: __init__.py  loader.py
src/vsconf/log/: __init__.py  output.py
tests/: test_vsconf.py
