[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vsconf"
version = "1.0.0"
description = "vs code pure code setup"
readme = "README.md"
license = {text = "GPL-3.0-only"}
requires-python = ">=3.9"
authors = [
    {name = "redigere"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.scripts]
vsconf = "vsconf.cli:main"

[project.urls]
Homepage = "https://github.com/redigere/vsconf"
Repository = "https://github.com/redigere/vsconf"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
